log
vi., 22 de abr. de 2022 11:20:28: 
 tests:  1|8
total_score: 0/70
98afc7c
vi., 22 de abr. de 2022 11:23:31: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|8
total_score: 0/70
491ec18
vi., 22 de abr. de 2022 11:25:18: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:45:5: error: expected ';' before 'return'
     return this;
     ^~~~~~
treemap.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
5c32576
vi., 22 de abr. de 2022 11:26:26: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
6b88fff
vi., 22 de abr. de 2022 11:27:04: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
af244ce
vi., 22 de abr. de 2022 11:44:16: 
 treemap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  0|0
53c0e0d
vi., 22 de abr. de 2022 11:45:47: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
008cadd
vi., 22 de abr. de 2022 11:46:32: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
e08b8b0
vi., 22 de abr. de 2022 11:47:04: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
b85a82b
vi., 22 de abr. de 2022 11:48:42: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
cc4291a
